# limitra

./: .gitignore  LICENSE  README.md  mise.toml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/workflows/: ci.yml  python-package.yml
.mise-tasks/: black  check  ci  doc  install  isort  mypy  pylint  test  test-no-redis
docs/: index.md
docs/getting-started/: configuration.md  installation.md  reference.md
docs/guide/: algorithms.md  backends.md  decorator.md  error-handling.md
docs/integrations/: django.md  fastapi.md  flask.md
docs/stylesheets/: extra.css
limitra/: __init__.py  _config.py  _decorator.py  base.py  exceptions.py
limitra/algorithms/: __init__.py  fixed_window.py  leaky_bucket.py  sliding_window.py  token_bucket.py
tests/: conftest.py  shared.py  test_algorithms.py  test_limitra.py
tests/integrations/: test_django.py  test_fastapi.py  test_flask.py
tests/redis/: test_algorithms.py  test_fail_open.py
